@@ -7,6 +7,7 @@ kano-settings (4.0.3-0) unstable; urgency=low
   * Included full screen model EDID in Settings > Display
   * Removed unused kano_screen_used config comment
   * Added edid-tools for dumping and flashing EDIDs
+  * Added check for wireless passphrase lenght in GUI connect app
 
  -- Team Kano <dev@kano.me>  Wed, 4 Oct 2017 17:17:45 +0100
 
